--- a/src/styles/mainComponent.scss
+++ b/src/styles/mainComponent.scss
@@ -1,7 +1,7 @@
 .containerMain{
-    background-color: $grey;
+    // background-color: $grey;
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px 25px;
     height: 95%;
     font-family: 'Teachers';
     color: $white;
