--- a/src/styles/contactCard.scss
+++ b/src/styles/contactCard.scss
@@ -24,19 +24,14 @@
         margin: 25px 0px;
         padding: 3px 30px;
         border-radius: 5px;
-    }
 
-    .title{
-        margin-top: 20px;
-        &::after{
-            content: "";
-            display: block;
-            height: 2px;
-            width: 100%;
-            margin-bottom: 8px;
-            background: $gradient
+        &:hover{
+            box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.3); 
+            cursor: pointer;
         }
     }
+
+    
     
 
     div{
