--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -132,7 +132,7 @@ body {
   bottom: 0;
   right: 0;
 }
-.containerProjects .project .buttonsProjects > i {
+.containerProjects .project .buttonsProjects i {
   background-color: #A435F0;
   width: 3rem;
   height: 3rem;
@@ -143,7 +143,7 @@ body {
   margin: 0.5rem;
   font-size: 25px;
 }
-.containerProjects .project .buttonsProjects > i:hover {
+.containerProjects .project .buttonsProjects i:hover {
   box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
@@ -154,6 +154,22 @@ body {
   width: 30%;
   border-radius: 5px;
   overflow: hidden;
+  position: relative;
+}
+.containerProjects .project .containerProject figure i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 0;
+  color: black;
+  transition: font-size 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+}
+.containerProjects .project .containerProject figure:hover i {
+  font-size: 48px;
+  opacity: 0.8;
+  cursor: pointer;
 }
 .containerProjects .project .containerProject figure img {
   width: 100%;
@@ -163,6 +179,7 @@ body {
 .containerProjects .project .containerProject figure img:hover {
   transform: scale(1.2);
   cursor: pointer;
+  opacity: 0.5;
 }
 .containerProjects .project .containerProject p {
   font-size: 2.1vh;
