--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -24,7 +24,7 @@
             bottom: 0;
             right: 0;
 
-            & > i{
+            & i{
                 background-color: $purple; 
                 width: 3rem; 
                 height: 3rem; 
@@ -49,13 +49,34 @@
                 width: 30%;
                 border-radius: 5px;
                 overflow: hidden;
+                position: relative;
+
+                i{
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    font-size: 0; 
+                    color: black;
+                    transition: font-size 0.3s ease, opacity 0.3s ease;
+                    opacity: 0;
+                }
+
+                &:hover i{
+                    font-size: 48px; 
+                    opacity: 0.8; 
+                    cursor: pointer;
+                }
+
                 img{
                     width: 100%;
                     border-radius: 5px;
                     transition: linear 0.2s;
+                    
                     &:hover{
                         transform: scale(1.2);
                         cursor: pointer;
+                        opacity: 0.5;
                     }
                 }
             }
