--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -150,8 +150,11 @@ body {
 .containerProjects .project .containerProject {
   padding: 10px;
 }
-.containerProjects .project .containerProject figure {
+.containerProjects .project .containerProject a {
   width: 30%;
+}
+.containerProjects .project .containerProject figure {
+  width: 100%;
   border-radius: 5px;
   overflow: hidden;
   position: relative;
@@ -162,7 +165,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 0;
-  color: black;
+  color: #fefefe;
   transition: font-size 0.3s ease, opacity 0.3s ease;
   opacity: 0;
 }
@@ -179,7 +182,7 @@ body {
 .containerProjects .project .containerProject figure img:hover {
   transform: scale(1.2);
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 .containerProjects .project .containerProject p {
   font-size: 2.1vh;
